--- a/themes/desktop/css/game.css
+++ b/themes/desktop/css/game.css
@@ -302,3 +302,157 @@
 	font-size: 14px;
 	color: #999999;
 }
+
+#botSettings {
+	position: relative;
+	display: inline-flex;
+	margin-top: 20px;
+	margin-bottom: 0;
+}
+
+.bot-button {
+	padding-top: 20px;
+	margin-bottom: 5px;
+	position: relative;
+	overflow: auto;
+	text-align: center;
+	color: #999;
+	cursor: pointer;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 6px;
+	/*background-color: rgba(255, 255, 255, 0.1);*/
+	border: 1px solid #888;
+	width: 60px;
+	height: 60px;
+	margin-right: 20px;
+	/*border: 1px solid #5bc0de;
+	-webkit-box-shadow: 0px 0px 7px #5bc0de;
+	-moz-box-shadow: 0px 0px 7px #5bc0de;
+	box-shadow: 0px 0px 7px #5bc0de;*/
+
+	margin-right: 10px;
+	width: 100px;
+	font-size: 16px;
+}
+
+
+
+.radio-button {
+	border: 1px solid #888;
+	background-color: rgba(37, 37, 37, 0.5);
+	color: #999;
+	position: relative;
+	cursor: pointer;
+	text-align: center;
+	-webkit-user-select: none;
+}
+
+.radio-button:hover {
+	color: #ccc;
+	border: 1px solid #bbb;
+}
+
+.selected-radio-button {
+	background-color: #a8a39d;
+	border: 1px solid #a8a39d !important;
+	color: #444 !important;
+}
+
+.selected-radio-button:hover {
+	background-color: #a8a39db3;
+}
+
+
+
+.check-button {
+	border: 1px solid #888;
+	background-color: rgba(37, 37, 37, 0.5);
+	color: #999;
+	position: relative;	
+	cursor: pointer;
+	text-align: center;
+	-webkit-user-select: none;
+}
+
+.check-button:hover {
+	color: #ccc;
+	border: 1px solid #bbb;
+}
+
+.selected-check-button {
+	background-color: #a8a39d;
+	border: 1px solid #a8a39d !important;
+	color: #444 !important;
+}
+
+.selected-check-button:hover {
+	background-color: #a8a39db3;
+}
+
+
+
+.player-mode-button {
+	width: 100px;
+	height: 50px;
+
+	padding-top: 15px;
+	margin-bottom: 5px;
+	margin-right: 10px;
+
+	/*height: 60px;*/
+	
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	border-radius: 6px;
+
+	font-size: 16px;
+	
+	/*margin-right: 20px;*/	
+}
+
+/*.player-mode-button:hover {
+	color: #ccc;
+	border: 1px solid #bbb;
+}*/
+
+.bot-mode-button {
+	width: 60px;
+	height: 50px;
+
+	/*padding-top: 15px;*/
+
+	padding-top: 17px;
+	margin-bottom: 5px;
+	margin-right: 10px;
+		
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	border-radius: 6px;	
+	
+	/*margin-right: 20px;*/	
+	/*font-size: 16px;*/
+	/*height: 60px;*/
+
+	font-size: 14px;
+}
+
+.size-mode-button {
+	width: 32%;
+	height: 66px;
+
+	padding-top: 13px;
+	/*margin-bottom: 5px;*/
+	margin-right: 10px;
+	
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	border-radius: 6px;
+
+	font-size: 16px;
+	font-weight: bold;
+}
+
+.bot-off {
+	display: none;
+}
