--- a/themes/mobile/css/game.css
+++ b/themes/mobile/css/game.css
@@ -93,6 +93,40 @@
 	border: 3px solid #555555;
 }
 
+
+
+
+.Bot {
+	padding: 20px 20px 20px 20px;
+	margin-bottom: 20px;
+	position: relative;
+	overflow: auto;
+	text-align: left;
+	font-size: 36px;
+	color: #bb5555;
+	cursor: pointer;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	border-radius: 10px;
+}
+
+.Bot-Active {
+	background-color: rgba(60, 40, 40, 0.8) !important;
+	border: 3px solid #884444 !important;
+}
+
+.Bot-Active:hover {
+	background-color: rgba(70, 50, 50, 0.85) !important;
+	border: 3px solid #aa5555 !important;
+}
+
+.Bot-Status-Active {
+	color: #bb5555 !important;
+}
+
+
+
+
 .Player-Name {
 	float: left;
 	width: 60%;
@@ -266,4 +300,151 @@
 	padding: 30px 15px 30px 15px;
 	font-size: 36px;
 	color: #999999;
+}
+
+
+
+
+
+.bot-button {
+	padding-top: 20px;
+	margin-bottom: 5px;
+	position: relative;
+	overflow: auto;
+	text-align: center;
+	color: #999;
+	cursor: pointer;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 6px;
+	/*background-color: rgba(255, 255, 255, 0.1);*/
+	border: 1px solid #888;
+	width: 60px;
+	height: 60px;
+	margin-right: 20px;
+	/*border: 1px solid #5bc0de;
+	-webkit-box-shadow: 0px 0px 7px #5bc0de;
+	-moz-box-shadow: 0px 0px 7px #5bc0de;
+	box-shadow: 0px 0px 7px #5bc0de;*/
+
+	margin-right: 10px;
+	width: 100px;
+	font-size: 16px;
+}
+
+
+
+.radio-button {
+	border: 2px solid #888;
+	background-color: rgba(37, 37, 37, 0.5);
+	color: #999;
+	position: relative;
+	cursor: pointer;
+	text-align: center;
+	-webkit-user-select: none;
+}
+
+.radio-button:hover {
+	color: #ccc;
+	border: 2px solid #bbb;
+}
+
+.selected-radio-button {
+	background-color: #a8a39d;
+	border: 2px solid #a8a39d !important;
+	color: #444 !important;
+}
+
+.selected-radio-button:hover {
+	background-color: #a8a39db3;
+}
+
+
+
+.check-button {
+	border: 2px solid #888;
+	background-color: rgba(37, 37, 37, 0.5);
+	color: #999;
+	position: relative;	
+	cursor: pointer;
+	text-align: center;
+	-webkit-user-select: none;
+}
+
+.check-button:hover {
+	color: #ccc;
+	border: 2px solid #bbb;
+}
+
+.selected-check-button {
+	background-color: #a8a39d;
+	border: 2px solid #a8a39d !important;
+	color: #444 !important;
+}
+
+.selected-check-button:hover {
+	background-color: #a8a39db3;
+}
+
+
+
+.player-mode-button {
+	width: 50%;
+	height: 94px;
+
+	padding-top: 32px;
+	/*margin-bottom: 10px;*/
+	margin-right: 15px;
+	
+	-moz-border-radius: 9px;
+	-webkit-border-radius: 9px;
+	border-radius: 9px;
+
+	font-size: 24px;
+}
+
+/*.player-mode-button:hover {
+	color: #ccc;
+	border: 1px solid #bbb;
+}*/
+
+.bot-mode-button {
+	display: inline-block;
+	width: 94px;
+	height: 94px;
+
+	/*padding-top: 15px;*/
+
+	padding-top: 28px;
+	/*margin-bottom: 10px;*/
+	margin-right: 10px;
+		
+	-moz-border-radius: 9px;
+	-webkit-border-radius: 9px;
+	border-radius: 9px;	
+	
+	/*margin-right: 20px;*/	
+	/*font-size: 16px;*/
+	/*height: 60px;*/
+
+	font-size: 28px;
+}
+
+.size-mode-button {
+	width: 32%;
+	height: 94px;
+
+	padding-top: 11px;
+	margin-right: 14px;
+	
+	-moz-border-radius: 9px;
+	-webkit-border-radius: 9px;
+	border-radius: 9px;
+
+	font-size: 32px;
+	/*font-weight: bold;*/
+}
+
+.bot-off {
+	display: none;
 }
