Тестирование карт игрового поля.

--- a/components/GameBoard/views/GameBoard-mobile.css
+++ b/components/GameBoard/views/GameBoard-mobile.css
@@ -37,7 +37,7 @@
 	text-align: center;
 	padding: 3px 1px 0px 0px;
 	color: #FFFFFF;
-	background-color: #897559;
+	background-color: #303030; /* #897559; */
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
