--- a/themes/desktop/css/site.css
+++ b/themes/desktop/css/site.css
@@ -297,6 +297,11 @@ textarea {
 
 #header {
 	padding: 0;
+
+	/*background: white url(../images/background.gif) repeat;*/
+	/*box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);*/
+	/*position: fixed;*/
+	/*z-index: 10;*/
 }
 
 #footer {
